Fix figure overflow

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -170,7 +170,7 @@
   }
 }
 
-@media only screen and (max-width: 855px) {
+@media only screen and (max-width: 880px) {
   .figure {
     width: 45%;
   }
